2001-06-10  Martin Baulig  <baulig@suse.de>

	* configure.in: Don't depend on GConf anymore.

2001-06-10  Martin Baulig  <baulig@suse.de>

	* ChangeLog: This is the *top-level* ChangeLog file.
	There are ChangeLog files in the libgnome/ and monikers/ directory.

2001-06-07  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added "az" to the languages list.

2001-06-05  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "tr" to the languages list.

2001-06-05  Martin Baulig  <baulig@suse.de>

	* monikers/: New directory, but don't compile it by default.
	We may move this into bonobo-config or bonobo-extra later on, but
	for the moment it's easier for me to play around with it when it's
	here.

2001-06-03  Joe Shaw  <joe@ximian.com>

	* configure.in: Get rid of the db check and --enable-prefer-db1

2001-05-30  Christophe Merlet  <redfox@eikonex.org>

	* configure.in: Added fr to $ALL_LINGUAS.

2001-05-18  Martin Baulig  <baulig@suse.de>

	* configure.in: Optionally depend on libgnomesupport (from
	the libgnomebase module).

	* acconfig.h (HAVE_GNOMESUPPORT): Added.

	* libgnome/libgnome-init.c: #include <gnomesupport.h> if we
	HAVE_GNOMESUPPORT.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* idl/: New directory.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* configure.in (REBUILT): Added this; copied from gtk+.

2001-04-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added nn and no to ALL_LINGUAS.
	
2001-04-18  Michael Meeks  <michael@ximian.com>

	* *.[ch]:
	
	s/\#include[ \t]*<libgnomebase\/gnome-defs.h>//;
	s/BEGIN_GNOME_DECLS/G_BEGIN_DECLS/g;
	s/END_GNOME_DECLS/G_END_DECLS/g;
	
2001-04-17  Martin Baulig  <baulig@suse.de>

	* configure.in: Unconditionally depend on libbonobo; removed the
	`HAVE_LIBBONOBO' automake conditional.
	(LIBGNOME_EXTRA_DEPS): Removed.

2001-04-16  Martin Baulig  <baulig@suse.de>

	* configure.in (HAVE_LIBBONOBO): #define this if we have libbonobo.

2001-04-13  Martin Baulig  <baulig@suse.de>
