@@ -58,52 +58,22 @@ AC_SUBST(REBUILD)
 dnl
 dnl Start of pkg-config checks
 dnl
-GNOME_PKGCONFIG_CHECK_OPTIONAL_MODULES(LIBGNOMESUPPORT, libgnomesupport-2.0:1.96.0)
-if test x$HAVE_LIBGNOMESUPPORT = xyes ; then
-  AC_DEFINE(HAVE_GNOMESUPPORT)
-fi
-AC_SUBST(LIBGNOMESUPPORT_CFLAGS)
-AC_SUBST(LIBGNOMESUPPORT_LIBS)
+PKG_CHECK_MODULES(LIBGNOME, ORBit-2.0 >= 2.3.90 glib-2.0 >= 1.3.1 gnome-vfs-2.0 oaf-2.0 libxml-2.0 libbonobo-2.0)
+AC_SUBST(LIBGNOME_CFLAGS)
+AC_SUBST(LIBGNOME_LIBS)
 
-GNOME_PKGCONFIG_CHECK_MODULES(ORBIT, ORBit-2.0:2.3.90)
-AC_PATH_PROG(ORBIT_IDL, orbit-idl, no)
-AC_SUBST(ORBIT_CFLAGS)
-AC_SUBST(ORBIT_LIBS)
+PKG_CHECK_MODULES(MONIKER, ORBit-2.0 >= 2.3.90 glib-2.0 >= 1.3.1 gnome-vfs-2.0 oaf-2.0 libxml-2.0 libbonobo-2.0)
+AC_SUBST(MONIKER_CFLAGS)
+AC_SUBST(MONIKER_LIBS)
 
-GNOME_PKGCONFIG_CHECK_MODULES(GLIB, glib-2.0:1.3.1)
-AC_SUBST(GLIB_CFLAGS)
-AC_SUBST(GLIB_LIBS)
-
-GNOME_PKGCONFIG_CHECK_MODULES(GNOME_VFS, gnome-vfs-2.0)
 GNOME_VFS_VERSION=`$PKG_CONFIG --modversion gnome-vfs-2.0`
 AC_SUBST(GNOME_VFS_VERSION)
-AC_SUBST(GNOME_VFS_CFLAGS)
-AC_SUBST(GNOME_VFS_LIBS)
 
-GNOME_PKGCONFIG_CHECK_MODULES(OAF, oaf-2.0)
-AC_SUBST(OAF_CFLAGS)
-AC_SUBST(OAF_LIBS)
-
-GNOME_PKGCONFIG_CHECK_MODULES(LIBXML, libxml-2.0:2.3.1)
-AC_SUBST(LIBXML_CFLAGS)
-AC_SUBST(LIBXML_LIBS)
-
-GNOME_PKGCONFIG_CHECK_MODULES(LIBBONOBO, libbonobo-2.0:1.96.0)
-AC_SUBST(LIBBONOBO_CFLAGS)
-AC_SUBST(LIBBONOBO_LIBS)
+AC_PATH_PROG(ORBIT_IDL, orbit-idl, no)
+AC_SUBST(ORBIT_IDL)
 
 AC_CHECK_LIB(popt, poptStrippedArgv,, AC_MSG_ERROR([popt 1.5 or newer is required to build
 gnome-libs. You can download the latest version from ftp://people.redhat.com/sopwith/popt/]))
-
-dnl
-dnl Deprecated stuff
-dnl
-AC_ARG_ENABLE(deprecated, [  --disable-deprecated    Disable deprecated stuff in header files],[enable_deprecated="$enableval"],[enable_deprecated=no])
-if test x$enable_deprecated != xyes ; then
-  AC_DEFINE(GNOME_EXCLUDE_DEPRECATED_SOURCE)
-  AC_DEFINE(GNOME_EXCLUDE_DEPRECATED)
-fi
-AM_CONDITIONAL(EXCLUDE_DEPRECATED, test x$enable_deprecated != xyes)
 
 dnl This is installed from GTK+ 2.0's gdk-pixbuf
 AC_PATH_PROG(MAKE_INLINE_PIXBUF, make-inline-pixbuf)
