@@ -1,3 +1,9 @@
+2001-06-13  Martin Baulig  <baulig@suse.de>
+
+	You need to update your gnome-common to get this working.
+
+	* configure.in: Use PKG_CHECK_MODULES from pkg-config to check for stuff.
+
 2001-06-10  Martin Baulig  <baulig@suse.de>
 
 	* configure.in: Don't depend on GConf anymore.
